Layout bugs consertados v2

--- a/styles.css
+++ b/styles.css
@@ -487,6 +487,11 @@ ion-icon {
         align-items: center;
         text-align: start;
     }
+
+    main h2 {
+        width: 100%;
+        text-align: start;
+    }
     .create-quizz {
         width: 90%;
     }
